# bookworm-bot

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
data/domains/mechanics_demo/: probes.json  skills.yaml
data/domains/mechanics_demo/pages/: demo_fbd.md  page_energy.md  page_fbd.md  page_friction.md  page_newton.md  page_units.md  pages.json
docs/: DEMO.md  LOCAL_STACK.md  READING.md  README.md
examples/: run_session.py
examples/sample_page_photo/: README.md  demo_fbd.md
src/bookworm/: __init__.py  __main__.py  cli.py
src/bookworm/agents/: __init__.py  ollama.py  student.py
src/bookworm/core/: __init__.py  domain_loader.py  eval.py  gap_assessor.py  grading.py  loop.py  practice.py  probe_runner.py  study.py
src/bookworm/envs/: README.md  __init__.py
src/bookworm/models/: __init__.py  probe.py  session.py  skill.py
src/bookworm/reading/: __init__.py  ingest.py  page_ingest.py  vlm.py
tests/: test_grading.py  test_loop.py  test_ollama_helpers.py  test_page_library.py  test_vlm_ingest.py
